modernize(java25): getFirst()/getLast()/removeLast() sequenced-collection accessors (wave 7)
12 sites where `list.get(0)` / `list.get(size()-1)` / `list.remove(size()-1)`
become the Java 25 SequencedCollection idiom — applied ONLY where the receiver
is a confirmed List/ArrayList/CopyOnWriteArrayList AND the access is provably
non-empty:
- get(0)->getFirst(): RoomSpecialTypes, HabboInfo, RoomTileManager,
  FindNewFriendsEvent, WiredVariableTextConnectorSupport (x2) — all behind an
  isEmpty()/ternary guard.
- get(size-1)->getLast(): WheelManager (non-empty via nextInt(totalWeight) which
  would have thrown first), ModToolSanctionInfoComposer, SecureLoginEvent,
  WiredVariableLevelSystemSupport (post isEmpty()-fill), InventoryItemsComposer
  (split() yields >=1).
- remove(size-1)->removeLast(): WheelManager (inside while size>RECENT_KEEP).

Semantics differ only on empty (getFirst throws NoSuchElement vs get(0)
IndexOutOfBounds) — every converted site is guarded non-empty, so behaviour is
identical. Unguarded / JsonArray / trove sites were left as-is. Compilation
proves every receiver implements SequencedCollection. mvn test -> 406, 0 failures.